警告、错误、启用方法 修复